src/main/java/com/example/springforumapp/errors/ApiSuccess.java
package com.example.springforumapp.errors;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ApiSuccess {
    private int status;
    private Object body;
}
